# ognLogbook-rs

./: .env  Cargo.toml  Dockerfile  README.md  poznamky-rustBook.txt  runDebug.sh  runLoop.sh  runPreProd.sh
data/: airfields.json  mosaic-500m.TIF
docker-scripts/: 2-build-image.sh  3-run-image.sh  6-export-container.sh  7-import-container.sh  x8-export-image.sh  x9-import-image.sh
src/: aircraft_beacon_listener.rs  airfield_manager.rs  configuration.rs  cron.rs  db.rs  main.rs  mqtt.rs  worker.rs
src/cron/: dataframe.rs  flown_distance_calculator.rs  periodic_timer.rs  real_takeoff_lookup.rs  redis_reaper.rs
src/db/: data_structures.rs  dataframe.rs  influxdb.rs  mysql.rs  redis.rs
src/worker/: airfield_manager.rs  beacon_processor.rs  data_structures.rs  db_thread.rs  expiring_dict.rs  geo_file.rs  influx_worker.rs  permanent_storage.rs  python_influx_bridge.rs  utils.rs
