[package]
name = "ogn_logbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogn_client = { path = "../ognClient-rs" }

ctrlc = { version = "3.0", features = ["termination"] }
crossbeam = "0.8.2"
chrono = "0.4.23"
gdal = "0.14.0"
lazy_static = "1.4.0"
mysql = "23.0.1"
serde_json = "1.0.89"
simple_redis = "0.6.1"
queues = "1.1.0"
log = "0.4.17"
rumqttc = "0.20.0"
simplelog = "0.12.0"
time = "0.3.15"
url = "2.2.2"

rinfluxdb = "0.2.0"
rinfluxdb-influxql = "0.2.0"
rinfluxdb-dataframe = "0.2.0"
rinfluxdb-types = "0.2.0"

[profile.release]
debug = true
